<resources>
    <string name="app_name">Touch&amp;Win</string>
    <string name="start_game">Start Game</string>
    <string name="score">Score</string>
    <string name="start">Start</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="touch_win">Touch-Win</string>
    <string name="select_your_phone_number">Select your phone number.</string>
</resources>
