<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@drawable/fire">


    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStart" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="100dp"/>


    <RadioGroup
            android:id="@+id/phoneNumber"
            android:layout_width="354dp"
            android:layout_height="121dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.639"
            android:background="@android:drawable/editbox_dropdown_light_frame">

        <RadioButton
                android:id="@+id/numberOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0"/>

        <RadioButton
                android:id="@+id/numberTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1"/>

        <RadioButton
                android:id="@+id/numberThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2"/>
    </RadioGroup>
    <TextView
            android:text="@string/touch_win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="36sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.066"
            android:background="@android:drawable/editbox_dropdown_light_frame" android:textColor="@color/red"/>
    <TextView
            android:text="@string/select_your_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/phoneNumber" app:layout_constraintVertical_bias="0.927"
            android:textColor="@color/red" android:background="@android:drawable/editbox_dropdown_light_frame"/>

</androidx.constraintlayout.widget.ConstraintLayout>